Modified my code